--- a/scenes.yaml
+++ b/scenes.yaml
@@ -131,24 +131,43 @@
     light.lampi:
       min_mireds: 153
       max_mireds: 500
+      effect_list:
+      - None
+      - candle
+      - fire
       supported_color_modes:
       - color_temp
       - xy
       mode: normal
       dynamics: none
       friendly_name: Lampi
-      supported_features: 40
+      supported_features: 44
       state: 'off'
-    light.innr_rb_250_c_59aa6efe_level_light_color_on_off:
+    light.on_off_plug_1:
+      supported_color_modes: []
+      mode: normal
+      dynamics: none
+      friendly_name: Plug Schlafzimmer
+      supported_features: 0
+      state: 'off'
+    switch.schlafzimmer_licht:
+      friendly_name: Schlafzimmer Licht
+      state: 'off'
+    light.schlafzimmer_kommode:
       min_mireds: 153
       max_mireds: 555
       effect_list:
-      - colorloop
+      - blink
+      - breathe
+      - okay
+      - channel_change
+      - finish_effect
+      - stop_effect
       supported_color_modes:
       - color_temp
-      - hs
+      - xy
       color_mode: color_temp
-      brightness: 5
+      brightness: 3
       color_temp: 555
       hs_color:
       - 29.751
@@ -160,20 +179,13 @@
       xy_color:
       - 0.614
       - 0.373
-      off_brightness:
-      friendly_name: Kommode
+      color:
+        x: 0.5492
+        y: 0.4082
+      linkquality: 109
+      friendly_name: Schlafzimmer Kommode
       supported_features: 63
       state: 'on'
-    light.on_off_plug_1:
-      supported_color_modes: []
-      mode: normal
-      dynamics: none
-      friendly_name: Plug Schlafzimmer
-      supported_features: 0
-      state: 'off'
-    switch.schlafzimmer_licht:
-      friendly_name: Schlafzimmer Licht
-      state: 'off'
   icon: mdi:weather-night
 - id: '1651699265494'
   name: Home Entertainment
@@ -398,3 +410,77 @@
       supported_features: 15
       state: open
   icon: mdi:curtains-closed
+- id: '1653237592741'
+  name: Rollos nachts im Sommer Schlafzimmer
+  entities:
+    cover.shelly_bad:
+      current_position: 21
+      device_class: shutter
+      friendly_name: Bad Rollo
+      supported_features: 15
+      state: open
+    cover.schlafzimmer_rollo_links:
+      current_position: 0
+      device_class: shutter
+      friendly_name: Schlafzimmer Rollo links
+      supported_features: 15
+      state: closed
+    cover.schlafzimmer_rollo_rechts:
+      current_position: 15
+      device_class: shutter
+      friendly_name: Schlafzimmer Rollo rechts
+      supported_features: 15
+      state: open
+    cover.schlafzimmer_rollo_balkon:
+      device_class: shutter
+      friendly_name: Schlafzimmer Rollo Balkon
+      supported_features: 15
+      state: unavailable
+  icon: mdi:weather-night
+- id: '1653253796150'
+  name: Rollos nachts im Sommer Wohnzimmer
+  entities:
+    cover.kuche_rollo_links:
+      current_position: 12
+      device_class: shutter
+      friendly_name: Küche Rollo links
+      supported_features: 15
+      state: open
+    cover.kuche_rollo_rechts:
+      current_position: 0
+      device_class: shutter
+      friendly_name: Küche Rollo rechts
+      supported_features: 15
+      state: closed
+    cover.wohnzimmer_rollo_balkon_rechts:
+      current_position: 0
+      device_class: shutter
+      friendly_name: Wohnzimmer Rollo Balkon Rechts
+      supported_features: 15
+      state: closed
+    cover.wohnzimmer_rollo_balkon_links:
+      current_position: 18
+      device_class: shutter
+      friendly_name: Wohnzimmer Rollo Balkon Links
+      supported_features: 15
+      state: open
+    cover.wohnzimmer_rollo:
+      current_position: 11
+      device_class: shutter
+      friendly_name: Wohnzimmer Rollo
+      supported_features: 15
+      state: open
+  icon: mdi:weather-night
+- id: '1655362835189'
+  name: Büro Rollo Arbeit
+  entities:
+    cover.buro_rollo:
+      current_position: 51
+      device_class: shutter
+      friendly_name: Büro Rollo
+      supported_features: 15
+      state: open
+  icon: mdi:roller-shade
+  metadata:
+    cover.buro_rollo:
+      entity_only: false
